# hermes-based-va

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  docker-compose.yml  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.workspace.ts
.github/workflows/: ci.yml
.superpowers/sdd/: 0.0.3-S06-report.md  0.0.3-S07-report.md  0.0.4-S07-report.md  0.0.4-S09-report.md  (+7 more)
eval/: policy_slot_map.yaml
hermes/: pyproject.toml
hermes-runtime/: .env.example  Dockerfile  pyproject.toml
hermes-runtime/hermes_runtime/: __init__.py  access_log.py  agent_turn_app.py  agent_turn_job.py  background_worker.py  boot.py  composio_smoke.py  copilot_eval_record.py  copilot_turn.py  eval_record.py  gateway_app.py  gateway_composition.py  gateway_store.py  home.py  integration_probe.py  job_dispatch.py  job_queue.py  judge_eval.py  live.py  metrics.py  openrouter.py  outbound_send.py  postgres_gateway_store.py  record_copilot_eval.py  record_eval.py  retention_sweep.py  simpletexting_reply.py  textline_reply.py  tool_backend.py  tool_dispatch_app.py  tool_dispatch_composition.py  turn_runner.py  turn_worker.py
hermes-runtime/hermes_runtime/datastore/: __init__.py  config.py  driver.py  migrate.py  pool.py  shopify_identity.py
hermes-runtime/hermes_runtime/datastore/handlers/: __init__.py  _common.py  accounts.py  agent_experience.py  cases.py  dead_letter.py  eval_review.py  identity.py  integrations.py  knowledge.py  memory.py  metrics.py  retention.py
hermes-runtime/hermes_runtime/knowledge/: __init__.py  config.py  driver.py  gates.py  ingest.py  migrate.py  pool.py  retriever.py
hermes-runtime/knowledge_migrations/: 0001_knowledge_chunk.sql
hermes-runtime/migrations/: 0001_initial_schema.sql  0002_account_last_login.sql  0003_knowledge_slots.sql  0004_eval_run_governance.sql  0005_dev_bootstrap.sql  0006_customer_memory_evidence.sql  0007_customer_memory_actor.sql  0008_agent_experience.sql  0008_inbound_event_claim.sql  0009_metric_event.sql  0010_customer_memory_retention_index.sql  0011_inbound_event_claim.sql  0011_job_queue.sql  0012_outbound_send.sql  0013_account_lockout.sql  0014_job_queue.sql  0015_integration_probe.sql
hermes-runtime/tests/: conftest.py  test_access_log_redaction.py  test_agent_turn_app.py  test_agent_turn_audit.py  test_agent_turn_job.py  test_background_worker.py  test_composio_boot_gate.py  test_composio_sdk_pin.py  test_composite_driver_overlay.py  test_connection_pooling.py  test_copilot_eval_record.py  test_copilot_learning_loop.py  test_copilot_memory_injection.py  test_copilot_memory_write_overlay.py  test_copilot_turn.py  test_customer_memory_datastore.py  test_datastore_audit_reads.py  test_datastore_dev_bootstrap.py  test_datastore_driver_admin.py  test_datastore_driver_agent_experience.py  test_datastore_driver_cases.py  test_datastore_driver_identity.py  test_datastore_driver_knowledge_corpus_status.py  test_datastore_driver_memory.py  test_datastore_driver_metrics.py  test_datastore_driver_retention.py  test_datastore_merge_provisional.py  test_datastore_migrate.py  test_datastore_read_model.py  test_datastore_sms_send.py  test_datastore_textline_send.py  test_dead_letter_view.py  test_e2e_memory_acceptance.py  test_e2e_pac4_employee_correction.py  test_entrypoint_discovery.py  test_eval_record.py  test_gateway_app.py  test_gateway_app_email.py  test_gateway_composition.py  test_gateway_healthz.py  (+37 more)
hermes/eval_runner/: __init__.py  __main__.py  advisory.py  assertions.py  cli.py  disclosures.py  fixtures.py  harness.py  judge.py  judge_fixtures.py  judge_measure.py  recorder.py  replay.py  report.py  run.py  transcript.py  turn_result.py  types.py
hermes/profiles/customer_service_external/: .env.example  SOUL.md  config.yaml
hermes/profiles/internal_copilot/: .env.example  SOUL.md  config.yaml
hermes/profiles/supervisor_admin/: .env.example  SOUL.md  config.yaml
hermes/tests/: test_admin_stubs.py  test_agent_experience.py  test_case.py  test_composio_driver.py  test_composio_factory.py  test_composite_driver_overlay.py  test_customer_memory_binding.py  test_customer_memory_write_source.py  test_driver_base.py  test_easyroutes.py  test_easyroutes_driver.py  test_eval_advisory.py  test_eval_assertions.py  test_eval_cli.py  test_eval_disclosures.py  test_eval_fixtures.py  test_eval_harness.py  test_eval_judge.py  test_eval_judge_fixtures.py  test_eval_judge_measure.py  test_eval_judge_rubric.py  test_eval_recorder.py  test_eval_replay.py  test_eval_report.py  test_eval_runner.py  test_eval_transcript.py  test_eval_turn_result.py  test_execute.py  test_gadget_attribution.py  test_gate_external_profile.py  test_gate_turn_binding.py  test_gateway_agent_turn.py  test_gateway_ingress.py  test_gateway_normalize.py  test_gateway_opt_out.py  test_gateway_pipeline.py  test_gateway_rate_limit.py  test_gateway_verify.py  test_identity.py  test_knowledge.py  (+21 more)
hermes/toee_hermes/: __init__.py  errors.py  execute.py  operational_policy.py  persona.py  tool_catalog.py  tool_gate.py
hermes/toee_hermes/drivers/: __init__.py  base.py  gadget.py  qbo_ar.py
hermes/toee_hermes/drivers/composio/: __init__.py  driver.py
hermes/toee_hermes/drivers/easyroutes/: __init__.py  driver.py
hermes/toee_hermes/drivers/mock/: __init__.py  admin_stubs.py  agent_experience.py  case.py  driver.py  easyroutes.py  identity.py  knowledge.py  memory.py  metrics.py  qbo.py  retention.py  shopify.py  sms_reply.py  square.py  textline.py
hermes/toee_hermes/gates/: __init__.py  external_profile.py  turn_binding.py
hermes/toee_hermes/gateway/: __init__.py  agent_turn.py  ingress.py  normalize.py  opt_out.py  pipeline.py  rate_limit.py  verify.py
hermes/toee_hermes/identity/: __init__.py  shopify_phone.py  summary.py
hermes/toee_hermes/plugin/: __init__.py  hooks.py  plugin.yaml  profiles.py  schemas.py  tools.py
scripts/: ci-harness-smoke.mjs  dev-up.mjs  eval.mjs  publish-arch-slices.ps1  run-dispatch-server.ps1  run-gateway.ps1  secret-scan.mjs  simulate-simpletexting-webhook.ps1  simulate-textline-tgp-webhook.ps1  simulate-textline-webhook.ps1
(+606 files in other folders)
