[project]
name = "toee-hermes-runtime"
version = "0.1.0"
description = "Hermes Runtime Shim: boots the Nous hermes-agent with the toee_hermes plugin per profile (ADR-0139, ADR-0100, ADR-0101)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "hermes-agent",
    "toee-hermes",
    # FastAPI is the Textline gateway's HTTP surface. It lives here (the heavy-deps
    # embedding venv), never in toee-hermes, so the plugin + eval_runner stay
    # dependency-free (ADR-0096/0100). The route layer wraps the pure
    # toee_hermes.gateway.* decision logic and the embedded AIAgent turn.
    "fastapi",
    "psycopg[binary]>=3",
    "composio>=0.15.0",
    "psycopg-pool>=3",
    # numpy is a real production dep: knowledge/retriever.py imports it at module
    # top-level for _cosine_ranking (RRF hybrid retrieval). It reached the local
    # venv transitively via the spike's fastembed install and was never declared
    # -> a fresh `uv sync --frozen` (CI runtime job) failed at test COLLECTION
    # (the pytest.skip("fastembed not installed") guards are inside functions, so
    # they never run when the module import itself dies). fastembed stays
    # UNDECLARED on purpose: it is lazy-imported inside fastembed_query_embedder,
    # and the CI skip-whitelist is designed around its absence (declaring it would
    # pull ~100MB models). See 0.0.3 final whole-branch review.
    "numpy>=2",
]

# ADR-0101 / ADR-0139: the official Hermes core is pinned to an exact git rev and
# managed by uv. This is the single place the SDK version lives. toee-hermes is the
# local plugin package, installed editable so Hermes discovers it via the
# ``hermes_agent.plugins`` entry point and imports of toee_hermes/eval_runner
# resolve natively (no pythonpath injection).
[tool.uv.sources]
hermes-agent = { git = "https://github.com/NousResearch/hermes-agent.git", rev = "c253b07" }
toee-hermes = { path = "../hermes", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pyyaml>=6",
    # Starlette's TestClient (used to drive the FastAPI gateway in tests) requires httpx.
    "httpx",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # starlette>=1 TestClient prefers httpx2, but the OpenAI SDK (via hermes-agent)
    # pins httpx<0.29 in this venv. Keep httpx and silence the test-only
    # deprecation rather than introduce a conflicting httpx2 resolution.
    "ignore:Using `httpx` with `starlette.testclient`",
]
